# cwaybeams

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  TODOS.md  debug.h  dom.c  dom.h  example  example.c  premake5.lua  setup-env.sh
blog/: 20210103-status.md  20210103-what-is-this.md  20210509.1-what-is-redux.md  20210509.2-signals.md
examples/: main.c
examples/glfw/: CMakeLists.txt  glfw_main.c
examples/gtk/: CMakeLists.txt  gtk_main.c
examples/todo/: main_todo.c
include/: app.h  arena.h  beam.h  box.h  debug.h  dom.h  dom_visitor.h  fnv.h  hfsm.h  layout.h  log.h  node.h  node_visitor.h  render.h  renderer.h  shared.h  version.h.in
include/gtk/: render.h
include/renderer/: glfw.h  sdl2.h
lib/: libglfw.so.3.4
src/: CMakeLists.txt  arena.c  beam.c  dom.c  dom_visitor.c  fnv_32a.c  hfsm.c  layout.c  node.c  node_visitor.c
src/gtk/: app.c  main.c  render.c
src/render/: glfw.c  sdl2.c  sdl2.h
src/renderer/: glfw.c  sdl2.c
test/: CMakeLists.txt  arena_test.c  arena_test.h  beam_test.c  beam_test.h  box_test.c  box_test.h  dom_test.c  dom_test.h  dom_visitor_test.c  dom_visitor_test.h  hash_test.c  hash_test.h  hfsm_test.c  hfsm_test.h  layout_test.c  layout_test.h  main_test.c  minunit.h  node_test.c  node_test.h  node_visitor_test.c  node_visitor_test.h  test_helper.c  test_helper.h  test_log.h  test_main.c
test/fixtures/: hfsm_keyboard.c  hfsm_keyboard.h
